# SkyInterceptor

./: .dockerignore  DOCKER.md  Dockerfile  GEMINI.md  IMPLEMENTATION_PLAN.md  Makefile  docker-compose.yml  install_dependencies.sh  monitor-build.sh
docker/: entrypoint.sh
interceptor_ws/: README.md
interceptor_ws/src/interceptor_drone/: CMakeLists.txt  package.xml
interceptor_ws/src/interceptor_drone/config/: controller_params.yaml  ekf_params.yaml  guidance_params.yaml  perception_params.yaml  stereo_sync_params.yaml
interceptor_ws/src/interceptor_drone/include/common/: math_utils.hpp  parameters.hpp  types.hpp
interceptor_ws/src/interceptor_drone/launch/: guidance.launch.py  interceptor_full.launch.py  perception.launch.py  simulation.launch.py
interceptor_ws/src/interceptor_drone/rviz/: interceptor_config.rviz
interceptor_ws/src/interceptor_drone/src/common/: math_utils.cpp  parameters.cpp
interceptor_ws/src/interceptor_drone/src/control/: hector_interface_node.cpp  trajectory_controller_node.cpp
interceptor_ws/src/interceptor_drone/src/estimation/: target_tracker_node.cpp
interceptor_ws/src/interceptor_drone/src/evasion/: evasion_controller_node.cpp
interceptor_ws/src/interceptor_drone/src/guidance/: guidance_controller_node.cpp
interceptor_ws/src/interceptor_drone/src/perception/: stereo_depth_processor.cpp  stereo_sync_node.cpp  target_3d_localizer.cpp  target_detector.py
interceptor_ws/src/interceptor_drone/urdf/: interceptor_quadrotor.urdf.xacro
interceptor_ws/src/interceptor_drone/worlds/: intercept_scenario.world
interceptor_ws/src/interceptor_interfaces/: CMakeLists.txt  package.xml
interceptor_ws/src/interceptor_interfaces/msg/: GuidanceCommand.msg  StereoImagePair.msg  TargetDetection.msg  TargetState.msg  TargetTrajectory.msg
interceptor_ws/src/interceptor_interfaces/srv/: SetInterceptMode.srv
scripts/: build-status.sh  monitor-build.sh  quick_test.sh
